Restyle page and import new font

--- a/index.html
+++ b/index.html
@@ -7,20 +7,29 @@
   <script src="script.js" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css"> 
 </head>
 <body>
-  <h1>Rock Paper Scissors</h1>
+  <header>
+    <h1>ROCK PAPER SCISSORS</h1>
+  </header>
   <div class="content">
     <div class="counter human">0</div>
       <div class="container">
-        <div class="button">Rock</div>
-        <div class="button">Paper</div>
-        <div class="button">Scissors</div>
+        <div class="button rock">ROCK 
+          <img src="images/rock.png">
+        </div>
+        <div class="button paper">PAPER
+          <img src="images/paper.png">
+        </div>
+        <div class="button scissors">SCISSORS
+          <img src="images/scissors.png">
+        </div>
       </div>
     <div class="counter computer">0</div>
   </div>  
   <div class="message">Wanna play a Game?</div>
+  <footer>Copyright © Pawan & Co</footer>
 </body>
 </html>
