--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Rock Paper Scissors</title>
+  <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
   <script src="script.js" defer></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,8 +13,9 @@
 </head>
 <body>
   <header>
-    <h1>ROCK PAPER SCISSORS</h1>
+    <h1>Rock Paper Scissors</h1>
   </header>
+  <div></div>
   <div class="content">
     <div class="counter human">0</div>
       <div class="container">
@@ -29,7 +31,7 @@
       </div>
     <div class="counter computer">0</div>
   </div>  
-  <div class="message">Wanna play a Game?</div>
+  <div class="message" id="message"></div>
   <footer>Copyright © Pawan & Co</footer>
 </body>
 </html>
