Make message text turn larger when you win

--- a/index.html
+++ b/index.html
@@ -20,18 +20,22 @@
     <div class="counter human">0</div>
       <div class="container">
         <div class="button rock">ROCK 
-          <img src="images/rock.png">
+          <img class="choices" src="images/rock.png" alt="rock">
         </div>
         <div class="button paper">PAPER
-          <img src="images/paper.png">
+          <img class="choices" src="images/paper.png" alt="paper">
         </div>
         <div class="button scissors">SCISSORS
-          <img src="images/scissors.png">
+          <img class="choices" src="images/scissors.png" alt="scissors">
         </div>
       </div>
     <div class="counter computer">0</div>
   </div>  
-  <div class="message" id="message"></div>
-  <footer>Copyright © Pawan & Co</footer>
+  <footer>
+    <div class="wrapper">
+      <div class="message" id="message"></div>
+      <img class="mickey-image" src="./images/mickey.png" alt="mickey mouse picture">
+    </div>
+  </footer>
 </body>
 </html>
